# lightshow

./: .gitignore  Cargo.toml
src/controller-arduino/: diagram.json  sketch.ino  wokwi-generator.py
src/controller-arduino/sketch/: diagram.json  libraries.txt  sketch.ino
src/controller-protocol/: Cargo.toml  README.md
src/controller-protocol/src/: instruction.rs  lib.rs  set_leds.rs
src/controller-protocol/src/instructions/: init.rs  mod.rs  set_leds.rs
src/controller-test-bench/: Cargo.toml
src/controller-test-bench/src/: cmd_handler.rs  instruction_builder.rs  main.rs  util.rs
src/controller-test-bench/src/inst_builders/: init.rs  mod.rs  set_leds.rs
src/demo-gui/: Cargo.toml
src/demo-gui/src/: gui.rs  main.rs
src/lightshow/: Cargo.toml
src/lightshow/src/: main.rs
src/sample/: Cargo.toml
src/sample/src/: avg_rec.rs  core.rs  dummy.rs  lib.rs
src/screenshot/: Cargo.toml
src/screenshot/src/: lib.rs
