[package]
name = "demo-gui"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
egui = "~0.21.0"
egui-wgpu = "~0.21.0"
egui-winit = "~0.21.0"
ls-sample = { path = "../sample" }
ls-screenshot = { path = "../screenshot" }
nu-ansi-term = "~0.47.0"
# need version greater than 0.11.0 to get wgpu 0.15
pixels = { git = "https://github.com/parasyte/pixels.git", rev = "295139a4129ef8c1e0d5dbbfe49019323bfc4ed5" }
time = "~0.3.14"
tracing = "~0.1.36"
tracing-subscriber = "~0.3.15"
winit = "~0.28.3"
winit_input_helper = "~0.14.0"
