[package]
name = "ls-sample"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
# only need this to get access to BGRA2 :(
# need custom fork of abandoned project to fix requirement of old winapi = 0.3.8
dxgcap = { git = "https://github.com/frohman04/dxgcap-rs.git", rev = "236d82ca8a3134dc290469640ad97e87eb320976" }
ls-screenshot = { path = "../screenshot" }
time = "~0.3.14"
tracing = "~0.1.36"
